# Robot-sumo

./: CMakeLists.txt  README.md  package.xml
launch/: ignition.launch.py  simulation.launch.py  spawn_robot.launch.py
src/: check_winner.cpp
src/tools/: solvers.py
worlds/: robot.urdf  world.sdf
